@@ -5,6 +5,9 @@
 	* cpar.cc: added call to omodp->parameterChanged() to cModulePar each 
 	time the parameter's value changes.
 
+	* cpar.cc: removed beforeChange()/afterChange() calls from setInput()
+	and setPrompt(), because these methods don't change the stored value.
+
 2005-07-24  Andras Varga
 
 	* cdispstr.cc: added setTagArg() method for numeric (long) argument.
